--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+:root {
+    --main-background: #2E2E2E;
+    --white: #FFFFFF;
+    --grey: #CCCCCC;
+    --blue: #3498DB;
+    --orange: #FF6347;
+    --orange2: #FF5733;
+    --black: #FF6347;
+    --black2: #4C4C4C;
+    --yellow: #FFD700;
+    --yellow2:#FFD700;
+    --green: #32CD32;
+    --red: #E74C3C;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+body{
+    /* background-color: #1b1a1a; */
+    background-color: var(--main-background);
 }
-
-.App-link {
-  color: #61dafb;
+.shadow
+{
+    margin: 20px 0;
+    padding: 20px;
+    border-radius: 30px;
+    color: aliceblue;
+    box-shadow: 10px 10px 37px 0px rgba(255, 255, 255, 0.75) !important;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.total-fatality
+{
+    color: var(--red);
+}
+.slight-injury
+{
+    color: var(--yellow);
+}
+.seroius-injury
+{
+    color: var(--orange);
+}
+.fatal-injury
+{
+    color: var(--red);
 }
